# umbrella_data_vault

./: .gitignore  Makefile  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/src/: detail.py  index.py
backend/src/backend/: config.py  main.py  parsers.py  scraper.py
backend/src/backend/parsers/: character_detail copy.py  character_detail.py  character_list.py
backend/tests/: test_character_detail.py  test_character_list.py  test_main.py  test_scraper.py
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/[param]/: page.tsx
frontend/app/layout/: Footer.tsx  Header.tsx  List.tsx  Search.tsx
frontend/app/lib/: api.ts
frontend/app/providers/: Providers.tsx
frontend/app/types/: types.d.ts
