[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Phillipml",email = "contato.phillip.menezes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5,<3.0.0",
    "beautifulsoup4>=4.14.3,<5.0.0",
    "pandas>=3.0.1,<4.0.0",
    "tqdm>=4.67.3,<5.0.0",
    "pyarrow>=23.0.1,<24.0.0"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.15.4"
ipykernel = "^6.29"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []
