[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Phillipml",email = "contato.phillip.menezes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5,<3.0.0",
    "beautifulsoup4>=4.14.3,<5.0.0",
    "pytest>=9.0.2,<10.0.0",
    "fastapi[standard] (>=0.135.1,<0.136.0)",
    "uvicorn[standard]>=0.41.0,<0.42.0",
]

[tool.vercel.scripts]
build = "python build.py"

[tool.poetry]
packages = [{include = "backend", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.15.4"
ipykernel = "^6.29"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []
